corrected the responsiveness & added some JS for sidebar menu

--- a/index.html
+++ b/index.html
@@ -26,102 +26,111 @@
 
 
     <!-- SideBar -->
-    <section class="sidebar">
-        <div class="logo">
-            <div class="logo-item">
-                <span class="material-symbols-outlined">
-                    menu
-                </span>
-                <p>Flatbox</p>
-            </div>
-        </div>
-        <div class="park-info">
-            <span>Park Info</span>
-            <div class="park-info-items">
-                <div>
-                    <span class="material-symbols-outlined">
-                        dashboard
-                    </span>
-                    <p>Dashboard</p>
-                </div>
-                <div>
-                    <span class="material-symbols-outlined">
-                        account_box
-                    </span>
-                    <p>Drivers</p>
-                </div>
-                <div>
-                    <span class="material-symbols-outlined">
-                        electric_car
-                    </span>
-                    <p>Cars</p>
-                </div>
-                <div>
-                    <span class="material-symbols-outlined">
-                        map</span>
-                    <p>Travels</p>
+    <section class="aside">
+        <div class="sidebar">
+            <div class="logo">
+                <div class="logo-item">
+                    <p>Flatbox</p>
                 </div>
             </div>
-        </div>
-        <div class="reports">
-            <span>Reports</span>
-            <div class="reports-items">
-                <div>
-                    <span class="material-symbols-outlined">
-                        receipt_long
-                    </span>
-                    <p>Payroll</p>
+            <div class="menu-container">
+                <div class="park-info">
+                    <span>Park Info</span>
+                    <div class="park-info-items">
+                        <div>
+                            <span class="material-symbols-outlined">
+                                dashboard
+                            </span>
+                            <p>Dashboard</p>
+                        </div>
+                        <div>
+                            <span class="material-symbols-outlined">
+                                account_box
+                            </span>
+                            <p>Drivers</p>
+                        </div>
+                        <div>
+                            <span class="material-symbols-outlined">
+                                electric_car
+                            </span>
+                            <p>Cars</p>
+                        </div>
+                        <div>
+                            <span class="material-symbols-outlined">
+                                map</span>
+                            <p>Travels</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <span class="material-symbols-outlined">
-                        credit_card
-                    </span>
-                    <p>Taxi Reports</p>
+                <div class="reports">
+                    <span>Reports</span>
+                    <div class="reports-items">
+                        <div>
+                            <span class="material-symbols-outlined">
+                                receipt_long
+                            </span>
+                            <p>Payroll</p>
+                        </div>
+                        <div>
+                            <span class="material-symbols-outlined">
+                                credit_card
+                            </span>
+                            <p>Taxi Reports</p>
+                        </div>
+                        <div>
+                            <span class="material-symbols-outlined">
+                                chart_data
+                            </span>
+                            <p>Productivity</p>
+                        </div>
+                        <div>
+                            <span class="material-symbols-outlined">
+                                local_police
+                            </span>
+                            <p>Tax</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <span class="material-symbols-outlined">
-                        chart_data
-                    </span>
-                    <p>Productivity</p>
-                </div>
-                <div>
-                    <span class="material-symbols-outlined">
-                        local_police
-                    </span>
-                    <p>Tax</p>
+                <div class="payments">
+                    <span>Payments</span>
+                    <div class="payments-items">
+                        <div>
+                            <span class="material-symbols-outlined">
+                                request_quote
+                            </span>
+                            <p>Payment Details</p>
+                        </div>
+                        <div>
+                            <span class="material-symbols-outlined">
+                                tab_recent
+                            </span>
+                            <p>Transactions</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="payments">
-            <span>Payments</span>
-            <div class="payments-items">
-                <div>
-                    <span class="material-symbols-outlined">
-                        request_quote
-                    </span>
-                    <p>Payment Details</p>
+            <div class="profile">
+                <div class="img-container">
+                    <img src="img/profile-pic.jpg" alt="profile-pic">
                 </div>
                 <div>
-                    <span class="material-symbols-outlined">
-                        tab_recent
-                    </span>
-                    <p>Transactions</p>
+                    <p>Amit Singh</p>
+                    <p>amit@amvirgin.com</p>
                 </div>
             </div>
-        </div>
-        <div class="profile">
-            <div class="img-container">
-                <img src="img/profile-pic.jpg" alt="profile-pic">
-            </div>
-            <div>
-                <p>Amit Singh</p>
-                <p>amit@amvirgin.com</p>
+            <div class="back-btn">
+                <button>Back</button>
             </div>
         </div>
     </section>
 
     <!-- Navbar -->
-<nav class="nav">
+<nav class="nav responsive-body">
+    <button class="sidebar-show-btn">
+        <span class="material-symbols-outlined">
+            menu
+            </span>
+    </button>
     <div class="input">
         <input type="text" id="search" placeholder="Enter your search keyword">
     </div>
