added- my-wallet, downloads, trending containers

--- a/index.html
+++ b/index.html
@@ -364,9 +364,109 @@
                 Analytics for last week
             </div>
         </div>
-
     </div>
 
+
+    <!-- Details -->
+    <section class="details responsive-body">
+        <div class="wallet">
+            <div class="head">
+                <p>My Wallet</p>
+                <span class="material-symbols-outlined">
+                    more_horiz
+                    </span>
+            </div>
+            <div class="amount">
+                <p>Available Amount <span>View Account</span></p>
+                <p>$255.86</p>
+            </div>
+            <div class="earn">
+                <p>EARNED THIS MONTH</p>
+                <P>$544.22</P>
+            </div>
+            <div class="withdrawl">
+                <p>WITHDRAWL THIS MONTH</p>
+                <p>$288.36</p>
+            </div>
+        </div>
+        <div class="downloads">
+            <div class="head">
+                <p>Downloads</p>
+                <span class="material-symbols-outlined">
+                    more_horiz
+                    </span>
+            </div>
+            <div class="files-container">
+                <div class="file-item">
+                    <span class="material-symbols-outlined">
+                        folder_zip
+                        </span>
+                    <p>flatbox_admin.zip</p>
+                </div>
+                <div class="file-item">
+                    <span class="material-symbols-outlined">
+                        picture_as_pdf
+                        </span>
+                    <p>reports_2022.pdf</p>
+                </div>
+                <div class="file-item">
+                    <iconify-icon icon="bxs:file-json"></iconify-icon>
+                    <p>package.json</p>
+                </div>
+                <div class="file-item">
+                    <iconify-icon icon="bxs:file-css"></iconify-icon>
+                    <p>style.css</p>
+                </div>
+            </div>
+            <div>Showing 4 out of 45 downloads.</div>
+        </div>
+        <div class="trending">
+            <div class="head">
+                <p>Trending</p>
+                <span class="material-symbols-outlined">
+                    trending_up
+                    </span>
+            </div>
+            <div class="trending-pic-container">
+                <div class="tr-items">
+                    <div class="pic">
+                        <img src="img/1-placeholder.jpg" alt="">
+                    </div>
+                    <div>Nick Jonas</div>
+                    <span class="material-symbols-outlined">
+                        more_vert
+                        </span>
+                </div>
+                <div class="tr-items">
+                    <div class="pic">
+                        <img src="img/2-placeholder.jpg" alt="">
+                    </div>
+                    <div>Joe Biden</div>
+                    <span class="material-symbols-outlined">
+                        more_vert
+                        </span>
+                </div>
+                <div class="tr-items">
+                    <div class="pic">
+                        <img src="img/3-placeholder.jpg" alt="">
+                    </div>
+                    <div>Donald J. Trump</div>
+                    <span class="material-symbols-outlined">
+                        more_vert
+                        </span>
+                </div>
+                <div class="tr-items">
+                    <div class="pic">
+                        <img src="img/4-placeholder.jpg" alt="">
+                    </div>
+                    <div>Rahul Gandhi</div>
+                    <span class="material-symbols-outlined">
+                        more_vert
+                        </span>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="app.js"></script>
